--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <small><a href="http://jetthoughts.com" target="_blank">JetThoughts</a></small>
   </h1>
   <ul class="unstyled social">
-    <li><a href="#" class="gh" target="_blank" title="View projects on Github">Github</a></li>
-    <li><a href="#" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
-    <li><a href="#" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
-    <li><a href="#" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
+    <li><a href="//github.com/pftg" class="gh" target="_blank" title="View projects on Github">Github</a></li>
+    <li><a href="//bitbucket.org/pftg" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
+    <li><a href="//linkedin.com/in/paulnikitochkin" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
+    <li><a href="//www.facebook.com/paul.nikitochkin" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
   </ul>
 
 </div> <!--/ .container-->
