Removed company name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <div class="container">
   <h1>
     <span>Paul Nikitochkin</span>
-    <small><a href="http://bigbinary.com/" target="_blank">BigBinary</a></small>
+    <small style="color: #08c">Software Engineer, Ruby on Rails Contributor</small>
+    
   </h1>
   <ul class="unstyled social">
     <li><a href="//github.com/pftg" class="gh" target="_blank" title="View projects on Github">Github</a></li>
