--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul class="unstyled social">
         <li><a href="//github.com/pftg" class="gh" target="_blank" title="View projects on Github">Github</a></li>
         <li><a href="//bitbucket.org/pftg" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
-        <li><a href="//linkedin.com/in/paulnikitochkin" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
+        <li><a href="//ua.linkedin.com/in/paulnik" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
         <li><a href="//www.facebook.com/paul.nikitochkin" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
         <li><a href="//plus.google.com/u/0/+PaulNikitochkin" class="gp" target="_blank" title="View profile on Google+">Google+</a></li>
         <li><a href="//twitter.com/pftg" class="tw" target="_blank" title="Follow me on twitter">Twitter</a></li>
