--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Paul Nikitochkin Ruby on Rails developer and cosmic ninja</title>
+  <title>{Phakin Cheangkrachange}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
@@ -28,19 +28,19 @@
 
 <div class="container">
   <div class="center_wrap">
-    <div class="pftg_center">
+    <div class="teamsoo_center">
       <h1>
-        <span>Paul Nikitochkin</span>
-        <small style="color: #08c">Software Engineer, Ruby on Rails Contributor</small>
+        <span>Phakin Cheangkrachange</span>
+        <small style="color: #08c">Software Engineer, Big Data Engineer</small>
 
       </h1>
       <ul class="unstyled social">
-        <li><a href="//github.com/pftg" class="gh" target="_blank" title="View projects on Github">Github</a></li>
-        <li><a href="//bitbucket.org/pftg" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
-        <li><a href="//ua.linkedin.com/in/paulnik" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
-        <li><a href="//www.facebook.com/paul.nikitochkin" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
-        <li><a href="//plus.google.com/u/0/+PaulNikitochkin" class="gp" target="_blank" title="View profile on Google+">Google+</a></li>
-        <li><a href="//twitter.com/pftg" class="tw" target="_blank" title="Follow me on twitter">Twitter</a></li>
+        <li><a href="//github.com/teamsoo" class="gh" target="_blank" title="View projects on Github">Github</a></li>
+        <li><a href="//bitbucket.org/teamsoo" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
+        <li><a href="//linkedin.com/in/phakincheangkrachange" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
+        <li><a href="//www.facebook.com/phakin.che" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
+        <!--<li><a href="//plus.google.com/u/0/+PaulNikitochkin" class="gp" target="_blank" title="View profile on Google+">Google+</a></li>-->
+        <!--<li><a href="//twitter.com/pftg" class="tw" target="_blank" title="Follow me on twitter">Twitter</a></li>-->
       </ul>
   </div>
   </div>
