--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{Phakin Cheangkrachange}</title>
+  <title>{Kunaphas Kongkitimanon}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
@@ -30,12 +30,12 @@
   <div class="center_wrap">
     <div class="teamsoo_center">
       <h1>
-        <span>Phakin Cheangkrachange</span>
-        <small style="color: #08c">Software Engineer, Big Data Engineer</small>
+        <span>Kunaphas Kongkitimanon</span>
+        <small style="color: #08c">Software Engineer, Reseach Assistant</small>
 
       </h1>
       <ul class="unstyled social">
-        <li><a href="//github.com/teamsoo" class="gh" target="_blank" title="View projects on Github">Github</a></li>
+        <li><a href="//github.com/silenus092" class="gh" target="_blank" title="View projects on Github">Github</a></li>
         <li><a href="//bitbucket.org/teamsoo" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
         <li><a href="//linkedin.com/in/phakincheangkrachange" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
         <li><a href="//www.facebook.com/phakin.che" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
