--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </h1>
       <ul class="unstyled social">
         <li><a href="//github.com/silenus092" class="gh" target="_blank" title="View projects on Github">Github</a></li>
-        <li><a href="//bitbucket.org/teamsoo" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
-        <li><a href="//linkedin.com/in/phakincheangkrachange" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
-        <li><a href="//www.facebook.com/phakin.che" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
+        <li><a href="//bitbucket.org/kunaphas_kongkitimanon/" class="bb" target="_blank" title="View projects on Bitbucket">Bitbucket</a></li>
+        <li><a href="//th.linkedin.com/in/kunaphas-kongkitimanon-29735772" class="li" target="_blank" title="View profile on LinkedIn">LinkedIn</a></li>
+        <li><a href="//www.facebook.com/kunaphas.kongkitimanon" class="fb" target="_blank" title="View profile on Facebook">Facebook</a></li>
         <!--<li><a href="//plus.google.com/u/0/+PaulNikitochkin" class="gp" target="_blank" title="View profile on Google+">Google+</a></li>-->
         <!--<li><a href="//twitter.com/pftg" class="tw" target="_blank" title="Follow me on twitter">Twitter</a></li>-->
       </ul>
